# project1

./: pyproject.toml
.github/workflows/: action.yml
seqparser/: parse.py  pyproject.toml  seq.py
tests/: test_parsers.py  test_transcribe.py
