[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "seqparser"
authors = [{name = "Jonathan Zhang", email = "jon.zhang@ucsf.edu"}]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/jzhang1198/project1"
